--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>Home @ Demiann.xyz</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Material+Icons"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+        </head>
     </head>
     <body>
         <div id="app"></div>
