--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="Portfolio website" />
+    <meta name="description" content="Web developer portfolio and contact website" />
+    <meta
+      name="keywords"
+      content="Web, Developer, Web Developer, Portfolio, hire me, Demian, Demiann.xyz, "
+    />
+
+    <meta name="robots" content="NOFOLLOW" />
+
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
     <title>Portfolio @ Demian</title>
     <link
