--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="keywords"
       content="Web, Developer, Web Developer, Portfolio, hire me, Demian, Demiann.xyz, "
     />
+    <meta rel="icon"/>
 
     <meta name="robots" content="NOFOLLOW" />
 
