--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155723081-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-155723081-1");
+    </script>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -9,9 +20,9 @@
       name="keywords"
       content="Web, Developer, Web Developer, Portfolio, hire me, Demian, Demiann.xyz, "
     />
-    <meta rel="icon"/>
+    <meta rel="icon" />
 
-    <meta name="robots" content="NOFOLLOW" />
+    <!-- <meta name="robots" content="NOFOLLOW" /> -->
 
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
     <title>Portfolio @ Demian</title>
