--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,13 +18,10 @@
     <meta name="description" content="Web developer portfolio and contact website" />
     <meta
       name="keywords"
-      content="Web, Developer, Web Developer, Portfolio, hire me, Demian, Demiann.xyz, "
+      content="Web, Developer, Web Developer, Portfolio, Hire me, Looking for a web developer?,  Demian, Demiann.xyz, "
     />
     <meta rel="icon" />
 
-    <!-- <meta name="robots" content="NOFOLLOW" /> -->
-
-    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
     <title>Portfolio @ Demian</title>
     <link
       rel="stylesheet"
