--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,16 +25,19 @@
     <title>Portfolio @ Demian</title>
     <link
       rel="stylesheet"
+      rel="preload"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
     />
     <link
       rel="stylesheet"
+      rel="preload"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700&display=swap"
+      rel="preload"
     />
   </head>
   <body>
