--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,13 +15,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="Web developer portfolio and contact website" />
+    <meta name="description" content="Freelance Full-stack Web Developer" />
     <meta
       name="keywords"
       content="Web, Developer, Web Developer, Portfolio, Hire me, Looking for a web developer?,  Demian, Demiann.xyz, "
     />
 
-    <title>Portfolio @ Demian</title>
+    <title>Portfolio | Demian - Full-stack Web Developer</title>
     <link
       rel="stylesheet"
       rel="preload"
