--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155723081-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155723081-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -10,7 +10,7 @@
       gtag("js", new Date());
 
       gtag("config", "UA-155723081-1");
-    </script>
+    </script> -->
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
