--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
     />
 
     <link
+      href="https://cdn.jsdelivr.net/npm/font-awesome@4.x/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700&display=swap"
       rel="preload"
