readd google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155723081-1"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNPR5022CJ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -9,8 +10,8 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-155723081-1");
-    </script> -->
+      gtag("config", "G-XNPR5022CJ");
+    </script>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
