add my own analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNPR5022CJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-XNPR5022CJ");
-    </script>
+    <!-- Our own analytics -->
+    <script
+      async
+      defer
+      data-domain="demiann.dev"
+      src="https://analytics.demiann.dev/js/plausible.js"
+    ></script>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
