fix: toast overflow

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- <script defer data-domain="demiann.dev" src="https://media.demiann.dev/js/script.js"></script> -->
 </head>
 
-<body>
+<body class="relative">
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
