--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <title>Demian - Full stack web developer</title>
 
-  <link rel="stylesheet" href="https://fonts.demiann.dev/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap">
+  <!-- <link rel="stylesheet" href="https://fonts.demiann.dev/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"> -->
 
   <!-- <script defer data-domain="demiann.dev" src="https://media.demiann.dev/js/script.js"></script> -->
 </head>
